# webgpu_sseob

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
src/: main.cpp
web/: index.html  index.js  run_local.sh
